<resources>
    <string name="app_name">Jockey Chat</string>
    <string name="action_search_text">Search</string>
    <string name="action_account_settings">Accounts</string>
    <string name="action_logout">Logout</string>
    <string name="email_hint">Enter your email …</string>
    <string name="password_hint">Enter password …</string>
    <string name="log_in_account_btn">Log In Account</string>
    <string name="create_new_account_btn">Need a new Account ?</string>
    <string name="confirm_password_hint">Confirm password ...</string>
    <string name="reg_create_account">Create Account</string>
    <string name="reg_login_btn">Already Have an account?</string>
    <string name="account_settings">Account Settings</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="setup_name">Input your name ...</string>
</resources>
